# open_mobile_biometrics

./: .gitignore  LICENSE  README.md
android/: settings.gradle.kts
android/demoapp/: build.gradle.kts
android/demoapp/src/androidTest/java/kl/open/demoapp/: ExampleInstrumentedTest.kt
android/demoapp/src/main/: AndroidManifest.xml
android/demoapp/src/main/assets/: config.json
android/demoapp/src/main/java/kl/open/demoapp/: MainActivity.kt
android/demoapp/src/main/java/kl/open/demoapp/ui/theme/: Color.kt  Theme.kt  Type.kt
android/demoapp/src/main/res/layout/: activity_main.xml
android/demoapp/src/main/res/values/: themes.xml
android/demoapp/src/test/java/kl/open/demoapp/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/lib/: build.gradle.kts
android/lib/src/androidTest/java/kl/open/fmandroid/: ExampleInstrumentedTest.kt
android/lib/src/main/: AndroidManifest.xml
android/lib/src/main/assets/: .gitkeep
android/lib/src/main/cpp/: CMakeLists.txt  lib.cpp
android/lib/src/main/cpp/include/: FMCore.h
android/lib/src/main/java/kl/open/fmandroid/: CameraActivity.kt  CameraCallback.kt  Decisor.kt  FaceMatchSDK.kt  FaceMatchSDKImpl.kt  MatchResult.kt  NativeBridge.kt
android/lib/src/main/java/kl/open/fmandroid/ui/theme/: Color.kt  Theme.kt  Type.kt
android/lib/src/main/res/values/: strings.xml  themes.xml
android/lib/src/test/java/kl/open/fmandroid/: ExampleUnitTest.kt
fmcore/: CMakeLists.txt  Config.cmake  build_all.sh
fmcore/include/: embedding_extraction.h  face_alignment.h  face_detection.h  liveness.h  utils.h
fmcore/src/: FMCore.cpp  embedding_extraction.cpp  face_alignment.cpp  face_detection.cpp  liveness.cpp  utils.cpp
fmcore/test/: FMCoreTest.cpp  LIvenessTest.cpp  liveness_results.csv
ios/FaceMatchSDK/: FaceMatchSDK-Bridging-Header.h
ios/FaceMatchSDK/FaceMatchSDK/: CameraPreviewViewController.swift  CameraView.swift  CameraViewModel.swift  Decisor.swift  FMProcessResult.h  FMProcessResult.m  FaceMatchBridge.h  FaceMatchBridge.mm  FaceMatchSDK.swift  FaceMatchSDKImpl.swift  Info.plist
ios/FaceMatchSDK/FaceMatchSDK.xcodeproj/: project.pbxproj
ios/FaceMatchSDK/FaceMatchSDK.xcodeproj/project.xcworkspace/xcuserdata/manuele.xcuserdatad/: UserInterfaceState.xcuserstate
ios/FaceMatchSDK/FaceMatchSDK.xcodeproj/xcshareddata/xcschemes/: FaceMatchSDK.xcscheme  FaceMatchSDKDemoApp.xcscheme
ios/FaceMatchSDK/FaceMatchSDK.xcodeproj/xcuserdata/manuele.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/FaceMatchSDK/FaceMatchSDK/FaceMatchSDK.docc/: FaceMatchSDK.md
ios/FaceMatchSDK/FaceMatchSDK/cpp/include/opencv2/: opencv_modules.hpp
ios/FaceMatchSDK/FaceMatchSDK/models/: MatchResult.swift
ios/FaceMatchSDK/FaceMatchSDKDemoApp/: ContentView.swift  ContentViewModel.swift  FaceMatchSDKDemoAppApp.swift  ImagePicker.swift  config.json
models/: config.json
